fix horizontal scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,6 @@
   background-repeat: no-repeat;
   background-position: center bottom;
   height: 800px;
-  width: 100vw;
 
   &-alt {
     background: linear-gradient(120deg,
